Update for AWS